// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders correctly with advanced header 1`] = `
<DocumentFragment>
  .cache-13y4eb8-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-13y4eb8-Stack-StyledStack[data-disabled='true'] {
  cursor: not-allowed;
}

.cache-nbgwq4-BorderedBox {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 24px;
}

.cache-nbgwq4-BorderedBox[data-is-active='true'] {
  border: 1px solid #521094;
}

.cache-nbgwq4-BorderedBox[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

<div
    class="cache-13y4eb8-Stack-StyledStack exwxj841"
    data-disabled="false"
  >
    <h2>
      Advanced Title
    </h2>
    <div
      class="cache-nbgwq4-BorderedBox exwxj840"
      data-disabled="false"
      data-is-active="false"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card renders correctly with className 1`] = `
<DocumentFragment>
  .cache-nbgwq4-BorderedBox {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 24px;
}

.cache-nbgwq4-BorderedBox[data-is-active='true'] {
  border: 1px solid #521094;
}

.cache-nbgwq4-BorderedBox[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

<div
    class="test cache-nbgwq4-BorderedBox exwxj840"
    data-disabled="false"
    data-is-active="false"
  >
    Hello
  </div>
</DocumentFragment>
`;

exports[`Card renders correctly with data-testid 1`] = `
<DocumentFragment>
  .cache-nbgwq4-BorderedBox {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 24px;
}

.cache-nbgwq4-BorderedBox[data-is-active='true'] {
  border: 1px solid #521094;
}

.cache-nbgwq4-BorderedBox[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

<div
    class="cache-nbgwq4-BorderedBox exwxj840"
    data-disabled="false"
    data-is-active="false"
    data-testid="test"
  >
    Hello
  </div>
</DocumentFragment>
`;

exports[`Card renders correctly with disabled 1`] = `
<DocumentFragment>
  .cache-nbgwq4-BorderedBox {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 24px;
}

.cache-nbgwq4-BorderedBox[data-is-active='true'] {
  border: 1px solid #521094;
}

.cache-nbgwq4-BorderedBox[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

<div
    class="cache-nbgwq4-BorderedBox exwxj840"
    data-disabled="true"
    data-is-active="false"
  >
    Hello
  </div>
</DocumentFragment>
`;

exports[`Card renders correctly with disabled and header 1`] = `
<DocumentFragment>
  .cache-13y4eb8-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-13y4eb8-Stack-StyledStack[data-disabled='true'] {
  cursor: not-allowed;
}

.cache-50796r-StyledText {
  color: #b5b7bd;
  font-size: 25px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-nbgwq4-BorderedBox {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 24px;
}

.cache-nbgwq4-BorderedBox[data-is-active='true'] {
  border: 1px solid #521094;
}

.cache-nbgwq4-BorderedBox[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

<div
    class="cache-13y4eb8-Stack-StyledStack exwxj841"
    data-disabled="true"
  >
    <h2
      class="cache-50796r-StyledText e13y3mga0"
    >
      Title
    </h2>
    <div
      class="cache-nbgwq4-BorderedBox exwxj840"
      data-disabled="true"
      data-is-active="false"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card renders correctly with header 1`] = `
<DocumentFragment>
  .cache-13y4eb8-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-13y4eb8-Stack-StyledStack[data-disabled='true'] {
  cursor: not-allowed;
}

.cache-177neqt-StyledText {
  color: #3f4250;
  font-size: 25px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-nbgwq4-BorderedBox {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 24px;
}

.cache-nbgwq4-BorderedBox[data-is-active='true'] {
  border: 1px solid #521094;
}

.cache-nbgwq4-BorderedBox[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

<div
    class="cache-13y4eb8-Stack-StyledStack exwxj841"
    data-disabled="false"
  >
    <h2
      class="cache-177neqt-StyledText e13y3mga0"
    >
      Title
    </h2>
    <div
      class="cache-nbgwq4-BorderedBox exwxj840"
      data-disabled="false"
      data-is-active="false"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card renders correctly with isActive 1`] = `
<DocumentFragment>
  .cache-nbgwq4-BorderedBox {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 24px;
}

.cache-nbgwq4-BorderedBox[data-is-active='true'] {
  border: 1px solid #521094;
}

.cache-nbgwq4-BorderedBox[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

<div
    class="cache-nbgwq4-BorderedBox exwxj840"
    data-disabled="false"
    data-is-active="true"
  >
    Hello
  </div>
</DocumentFragment>
`;

exports[`Card renders correctly without header 1`] = `
<DocumentFragment>
  .cache-nbgwq4-BorderedBox {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 24px;
}

.cache-nbgwq4-BorderedBox[data-is-active='true'] {
  border: 1px solid #521094;
}

.cache-nbgwq4-BorderedBox[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

<div
    class="cache-nbgwq4-BorderedBox exwxj840"
    data-disabled="false"
    data-is-active="false"
  >
    Hello
  </div>
</DocumentFragment>
`;
